--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ a {
 /* profile */
 .profile_container {
 	display: flex;
-	gap: 2rem;
+	gap: 3rem;
 }
 .profile_profileImg {
 	max-width: 250px;
@@ -129,6 +129,7 @@ a {
 	display: block;
 }
 .profile_title {
+    margin-top: 10px;
 	font-size: 1.5rem;
 	font-weight: 400;
 	text-transform: uppercase;
